singleton FiscoBcosDelegate (#33)